# backend/src/server.ts
@@ -5,6 +5,7 @@ import eventRouter from "./events/views";
 import swaggerUI from "swagger-ui-express";
 import spec from "../api-spec.json";
 import cors from "cors";
+import prisma from "../client";
 
 const app: Application = express();
 
@@ -20,6 +21,33 @@ app.use(cors());
  */
 app.use("/users", userRouter);
 app.use("/events", eventRouter);
+
+app.get("/about", async (req, res) => {
+  try {
+    const aboutData = await prisma.about.findFirst();
+    res.json(aboutData);
+  } catch (e: any) {
+    res.status(500).send({ success: false, error: e.message });
+  }
+});
+
+app.patch("/:pageid/about", async (req, res) => {
+  try {
+    const { pageid } = req.params
+    const { newContent } = req.body;
+    const updatedAbout = await prisma.about.update({
+      where: { id: pageid },
+      data: {
+        content: newContent,
+      },
+    });
+    
+    res.status(200).json({ message: 'Content updated successfully', updatedAbout });
+  } catch (e: any) {
+    console.error('Error updating content:', e);
+    res.status(500).json({ message: 'Failed to update content' });
+  }
+});
 
 // Root Url
 app.get("/", (req, res) => {
